# researchops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  worker.py
app/agents/: orchestrator.py  planner.py  research.py  sdk_runtime.py  tool_agent.py
app/api/: routes.py  schemas.py
app/approvals/: __init__.py  service.py
app/core/: audit.py  config.py  json_state.py  middleware.py  network.py  runtime_db.py  security.py  tasks.py  traces.py  users.py
app/evals/: __init__.py  golden.py  service.py
app/rag/: __init__.py  chunker.py  embeddings.py  extractors.py  github_repo.py  models.py  reranker.py  retriever.py  store.py  text.py
app/static/: app.js  index.html  styles.css
app/tools/: __init__.py  builtin.py  mcp.py  permissions.py  reports.py  sandbox.py  sql.py
db/: schema.sql
docs/: agent-control-spec.md  architecture.md  closed-loop-readiness.md  closed-loop-self-check.md  job-search-case-study.md  launch-hardening.md
docs/adr/: 0001-planner-tool-approval-boundary.md  0002-shift-left-launch-gates.md
scripts/: example_mcp_server.py  run_agent_self_check.py  run_eval_gate.py  seed_demo_data.py  validate_postgres_store.py
tests/: conftest.py  test_agent_flow.py  test_api_smoke.py  test_auth.py  test_mcp_integration.py  test_p0_contracts.py  test_runtime_postgres_selection.py  test_sandbox.py
